# sonic

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  typos.toml
.github/workflows/: ci-can.yml  ci-zenoh.yml  ci.yml  pages.yml
crates/sonic-bounded-alloc/: Cargo.toml
crates/sonic-bounded-alloc/examples/: fail_closed.rs
crates/sonic-bounded-alloc/src/: lib.rs
crates/sonic-bounded-alloc/tests/: cap.rs  counters.rs  lock.rs  thread_safety.rs
crates/sonic-connector-can/: Cargo.toml
crates/sonic-connector-can/src/: bridge.rs  connector.rs  dispatcher.rs  driver.rs  filter.rs  gateway.rs  health.rs  lib.rs  mock.rs  options.rs  real.rs  registry.rs  routing.rs
crates/sonic-connector-can/tests/: end_to_end.rs  trait_surface.rs  vcan_smoke.rs
crates/sonic-connector-codec/: Cargo.toml
crates/sonic-connector-codec/src/: json.rs  lib.rs
crates/sonic-connector-codec/tests/: decode_error.rs  encode_error.rs  round_trip.rs
crates/sonic-connector-core/: Cargo.toml
crates/sonic-connector-core/src/: codec.rs  descriptor.rs  error.rs  health.rs  lib.rs  reconnect.rs  routing.rs
crates/sonic-connector-core/tests/: channel_descriptor.rs  exp_backoff.rs  health.rs
crates/sonic-connector-ethercat/: Cargo.toml
crates/sonic-connector-ethercat/src/: bridge.rs  bus.rs  connector.rs  dispatcher.rs  driver.rs  ethercrab_driver.rs  gateway.rs  health.rs  lib.rs  mock.rs  options.rs  pdi.rs  registry.rs  routing.rs  runner.rs  scheduler.rs  sdo.rs  wkc.rs
crates/sonic-connector-ethercat/tests/: bridge.rs  bus_macro.rs  connector_trait.rs  end_to_end.rs  ethercrab_driver.rs  options.rs  pdi_routing.rs  registry.rs  routing.rs  runner.rs  scheduler.rs  sdo.rs  sidecar.rs  wkc.rs
crates/sonic-connector-host/: Cargo.toml
crates/sonic-connector-host/src/: connector.rs  gateway.rs  health_sub.rs  host.rs  lib.rs
crates/sonic-connector-host/tests/: host_register.rs
crates/sonic-connector-transport-iox/: Cargo.toml
crates/sonic-connector-transport-iox/src/: channel.rs  envelope.rs  factory.rs  lib.rs  now.rs  raw.rs
crates/sonic-connector-transport-iox/tests/: correlation.rs  overflow.rs  raw_round_trip.rs  round_trip.rs  seq_mono.rs  timestamp.rs
crates/sonic-connector-transport-iox/tests/common/: mod.rs
crates/sonic-connector-zenoh/: Cargo.toml
crates/sonic-connector-zenoh/src/: bridge.rs  connector.rs  dispatcher.rs  gateway.rs  health.rs  lib.rs  mock.rs  options.rs  querier.rs  queryable.rs  real.rs  registry.rs  routing.rs  session.rs
crates/sonic-connector-zenoh/tests/: bridge.rs  codec_failures.rs  connector_trait.rs  end_to_end.rs  gateway.rs  health.rs  health_transitions.rs  late_reply_dedup.rs  lifecycle.rs  min_peers_degraded.rs  mock_session.rs  no_reconnect_policy.rs  options.rs  querier.rs  query_round_trip.rs  queryable.rs  real_session.rs  registry.rs  routing.rs  saturation.rs  session.rs  sidecar.rs  timeout_propagation.rs  tokio_containment.rs
crates/sonic-executor/: Cargo.toml
crates/sonic-executor-tracing/: Cargo.toml
crates/sonic-executor-tracing/src/: lib.rs
crates/sonic-executor-tracing/tests/: tracing_observer.rs
crates/sonic-executor/examples/: diamond_graph.rs  interval_loop.rs  loan_demo.rs  pubsub_pipeline.rs  signal_slot.rs
crates/sonic-executor/src/: chain.rs  channel.rs  condition.rs  context.rs  control_flow.rs  error.rs  executor.rs  graph.rs  item.rs  lib.rs  monitor.rs  observer.rs  payload.rs  pool.rs  ready_ring.rs  runner.rs  service.rs  shutdown.rs  signal_slot.rs  task_id.rs  task_kind.rs  thread_attrs.rs  trigger.rs
crates/sonic-executor/tests/: CTRLC_MANUAL.md  chain.rs  channel.rs  graph.rs  iceoryx2_smoke.rs  monitor.rs  no_alloc_dispatch.rs  observer.rs  run_loop.rs  runner.rs  server_client_trigger.rs  service.rs  signal_slot.rs  stoppable.rs  thread_attrs.rs
crates/sonic-replay/: Cargo.toml  README.md
crates/sonic-replay/src/: lib.rs
docs/superpowers/specs/: 2026-05-17-can-connector-layer1-design.md  2026-05-17-can-connector-layer2-design.md
scripts/: check_dep_gating.sh  check_dep_gating_can.sh
spec/: Makefile  README.md  conf.py  index.rst  overview.rst  pharaoh.toml  pyproject.toml  schemas.json  ubproject.toml
spec/.pharaoh/project/: artefact-catalog.yaml  id-conventions.yaml  workflows.yaml
spec/.pharaoh/project/checklists/: req.md
spec/_templates/sphinx_hextra/: layout.html
spec/architecture/: bounded-alloc.rst  canopen-codegen.rst  connector.rst  device-codegen.rst  index.rst  plc-runtime.rst  safety.rst
spec/requirements/: bounded-alloc.rst  canopen-codegen.rst  connector.rst  device-codegen.rst  index.rst  plc-runtime.rst
spec/safety/: aou.rst  decomposition.rst  ffi.rst  fsc.rst  hara.rst  index.rst  item.rst  tsc.rst
spec/scripts/: package-lock.json  package.json  validate-mermaid.mjs
spec/verification/: bounded-alloc.rst  canopen-codegen.rst  connector.rst  device-codegen.rst  index.rst  plc-runtime.rst
