[workspace]
resolver = "2"
members = [
    "crates/sonic-bounded-alloc",
    "crates/sonic-connector-core",
    "crates/sonic-executor",
    "crates/sonic-executor-tracing",
    "crates/sonic-replay",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "Apache-2.0 OR MIT"
repository   = "https://github.com/patdhlk/sonic"
authors      = ["Patrick Dahlke"]

[workspace.dependencies]
iceoryx2          = "0.8"
thiserror         = "1"
bitflags          = "2"
crossbeam-channel = "0.5"
crossbeam-utils   = "0.8"
num_cpus          = "1"
tracing           = "0.1"
core_affinity     = "0.8"
serde             = { version = "1", default-features = false }
rand              = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# dev-only
proptest          = "1"
loom              = "0.7"
