[package]
name         = "sonic-connector-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Connector framework core: traits, error/health/reconnect types, and channel descriptors shared by every sonic-connector protocol crate. Implements BB_0001 (sonic-connector-core)."

[dependencies]
thiserror = { workspace = true }
serde     = { workspace = true, features = ["std"] }
rand      = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
