[package]
name         = "sonic-connector-zenoh"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Zenoh reference connector for the sonic-connector framework. Implements BB_0040 (FEAT_0042)."

[features]
default = []
# `zenoh-integration` pulls the real `zenoh` crate and exposes
# `RealZenohSession` (added in Z4). Off by default so consumers
# that only want the framework types and `MockZenohSession` don't
# pull zenoh's transitive dependencies.
zenoh-integration = []

[dependencies]
sonic-connector-core           = { path = "../sonic-connector-core" }
sonic-connector-transport-iox  = { path = "../sonic-connector-transport-iox" }
sonic-connector-host           = { path = "../sonic-connector-host" }
sonic-executor                 = { path = "../sonic-executor" }
iceoryx2                       = { workspace = true }
crossbeam-channel              = { workspace = true }
tokio                          = { workspace = true }
serde                          = { workspace = true, features = ["std"] }
thiserror                      = { workspace = true }

[dev-dependencies]
sonic-connector-codec = { path = "../sonic-connector-codec" }
sonic-bounded-alloc   = { path = "../sonic-bounded-alloc" }
proptest              = { workspace = true }
serde_json            = { workspace = true, features = ["std"] }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
