[package]
name         = "sonic-replay"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Placeholder reserved for future replay-coordinator integration."
publish      = false
